[gd_scene load_steps=3 format=3 uid="uid://bm8sobqrwb60g"]

[ext_resource type="Script" path="res://Table/Scripts/betting_section.gd" id="1_tpj3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahgj5"]
size = Vector2(175, 75)

[node name="BettingSection" type="Area2D"]
script = ExtResource("1_tpj3f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ahgj5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
